uspto-ohrs/main/schema/objects/Appointment_Request__c/Appointment_Request__c.object-meta.xml
<CustomObject>
    <label>Reference Request</label>
    <nameField>
        <displayFormat>REF REQ - {0000}</displayFormat>
        <label>Reference Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>