uspto-ohrs/main/schema/objects/Appointment_Request__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>Dare in in which the Reference Request (Appointment Request) was closed</description>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>