uspto-ohrs/main/schema/objects/Appointment_Request__c/fields/Last_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Sent_Date__c</fullName>
    <description>This field stores the date that the last reminder email was sent</description>
    <label>Last Email Sent Date</label>
    <type>Date</type>
</CustomField>