uspto-ohrs/main/schema/objects/Appointment_Request__c/fields/Original_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Email_Sent_Date__c</fullName>
    <description>It stores the date in which the email invite was sent to the reference</description>
    <label>Original Email Sent Date</label>
    <type>Date</type>
</CustomField>