uspto-ohrs/main/schema/objects/Appointment_Request__c/fields/Reference_Email__c.field-meta.xml
<CustomField>
    <fullName>Reference_Email__c</fullName>
    <description>Stores the email of the reference</description>
    <label>Reference Email</label>
    <type>Email</type>
</CustomField>