uspto-ohrs/main/schema/objects/Appointment_Request__c/fields/Reference_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_First_Name__c</fullName>
    <description>Stores the first name of the reference</description>
    <label>Reference First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>