uspto-ohrs/main/schema/objects/Appointment_Request__c/fields/Reference_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Last_Name__c</fullName>
    <description>Stores the last name of the reference</description>
    <label>Reference Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>