uspto-ohrs/main/schema/objects/Appointment_Request__c/fields/Selectee__c.field-meta.xml
<CustomField>
    <fullName>Selectee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The selectee for which the appointment request is set for.</description>
    <label>Selectee</label>
    <referenceTo>Selectee__c</referenceTo>
    <relationshipName>Appointment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>