uspto-ohrs/main/schema/objects/Appointment_Request__c/fields/Selectee_Name__c.field-meta.xml
<CustomField>
    <fullName>Selectee_Name__c</fullName>
    <formula>Selectee__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selectee Name</label>
    <type>Text</type>
</CustomField>