uspto-ohrs/main/schema/objects/Appointment_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Response Captured</fullName>
            </value>
            <value>
                <fullName>No Response was ever received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>