uspto-ohrs/main/schema/objects/Appointment_Request__c/fields/URL_Invite__c.field-meta.xml
<CustomField>
    <fullName>URL_Invite__c</fullName>
    <formula>HYPERLINK( ($Label.OHRS_Site_Base_URL +&apos;?requestId=&apos;+  Id+&apos;&amp;urlToken=&apos; +   URL_Token__c ), &apos;click here&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Invite</label>
    <type>Text</type>
</CustomField>