uspto-ohrs/main/schema/objects/Appointment_Request__c/fields/URL_Token__c.field-meta.xml
<CustomField>
    <fullName>URL_Token__c</fullName>
    <description>This field stores a random 32 random alphanumeric value that is used to validate Reference Requests&apos; URLs.</description>
    <label>URL Token</label>
    <length>32</length>
    <type>Text</type>
</CustomField>