uspto-ohrs/main/schema/objects/Appointment_Request__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Volunteer_Appointment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>