uspto-ohrs/main/schema/objects/Appointment_Request__c/fields/Volunteer_Name__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Name__c</fullName>
    <description>This field stores the name of the volunteer assigned to the appointment request/ appointment</description>
    <label>Volunteer Name</label>
    <length>160</length>
    <type>Text</type>
</CustomField>