uspto-ohrs/main/schema/objects/Appointment_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Volunteer__c</columns>
    <columns>Selectee__c</columns>
    <columns>Reference_First_Name__c</columns>
    <columns>Reference_Last_Name__c</columns>
    <columns>Reference_Email__c</columns>
    <columns>Relationship_Reference__c</columns>
    <columns>Status__c</columns>
    <columns>Original_Email_Sent_Date__c</columns>
    <columns>Closed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>